noticed two small adjustments needed, and overflow fix and remove optional on fave food

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -2,6 +2,8 @@
   background-color: #fff;
   min-height: 100vh;
   min-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   .pages {
     display: flex;
